# beauty_park

./: .gitignore  00_selenium_sample.ipynb  01_get_district.ipynb  02_get_shop_url_list.ipynb  03_get_shop_list.ipynb  README.md  district_urls.pkl  memo.md  pyproject.toml
shop_url_list_by_district/: shop_url_list_aichi.pkl  shop_url_list_fukuoka.pkl  shop_url_list_kumamoto.pkl  shop_url_list_osaka.pkl  shop_url_list_tokyo.pkl
