[project]
name = "beauty-park"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "tqdm>=4.67.1",
]
